test/libsolidity/syntaxTests/constructor/interface_constructor_new.sol
interface I {
	constructor() external;
}
// ----
// TypeError: (15-38): Constructor must be public or internal.
// TypeError: (15-38): Constructor cannot be defined in interfaces.
// TypeError: (15-38): Constructor must be implemented if declared.
